<resources>
    <string name="app_name">NITKHostels</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_nitk_hostels_app">Welcome to NITK Hostels App</string>
    <string name="student_log_in">Student Log-In</string>
    <string name="admin_log_in">Admin Log-In</string>
    <string name="registration_number">Registration Number</string>
    <string name="password">Password</string>
    <string name="log_in_std">Log-In</string>
    <string name="admin_number">Admin_number</string>
    <string name="log_in_admin">Log-In</string>
    <string name="no_of_incorrect_attempts">No. of Incorrect attempts :</string>
    <string name="log_in">Log-In</string>
    <string name="sign_in">Sign-In</string>
    <string name="mess">Mess</string>
    <string name="room">Room</string>
    <string name="fees">Fees</string>
    <string name="title_activity_student__workspace">Student_Workspace</string>
    <string name="Room">Room</string>
    <string name="Mess">Mess</string>
    <string name="Payment">Payment</string>
    <string name="Employee">Employee</string>
    <string name="title_activity_admin__workspace">Admin_Workspace</string>
    <string name="this_is_a_fragment">This is a Fragment</string>
    <string name="open_dialog">open dialog</string>
    <string name="block_number_5">Block Number: 5</string>
    <string name="room_number_56">Room Number: 56</string>
    <string name="room_type_single_accomodation">Room Type: Single Accommodation</string>
    <string name="mess_incharge_name_mr_x">Mess Incharge Name: Mr. X</string>
    <string name="mess_alloted_5th_block">Mess Alloted: 5th Block</string>
    <string name="block_bcd_mr_a">Block BCD :Mr. A</string>
    <string name="payment_status">Payment Status</string>
    <string name="paid1">Paid</string>
    <string name="hostel_fees">Hostel Fees:</string>
    <string name="batch_eee_2022">Batch: EEE 2022</string>
    <string name="student_roll_number_181ee109">Student Roll Number: 181EE109</string>
    <string name="student_registration_number_181870">Student Registration Number : 181870</string>
    <string name="student_payment_status">Student Payment Status</string>
    <string name="student_name_ankit_rai">Student Name: Ankit Rai</string>
    <string name="unpaid1">Unpaid</string>
    <string name="institute_fees">Institute Fees:</string>
    <string name="paid2">Paid</string>
    <string name="unpaid2">Unpaid</string>
    <string name="list_of_employees">List of Employees</string>
    <string name="_1_mr_x_n2_mr_y_n3_mr_z">1. Mr. X  2. Mr. Y  3. Mr. Z</string>
    <string name="_1_mr_x">1. Mr. X</string>
    <string name="hostel_fees_status">Hostel fees Status:</string>
    <string name="hostel_status">Yet to be cleared</string>
    <string name="institute_status">Institute fees status:</string>
    <string name="yet_to_be_cleared">Yet to be cleared</string>
    <string name="institute_fees_status">Institute Fees Status:</string>
</resources>
