<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/room_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room_number_56"
        android:textAlignment="center"
        android:textSize="30sp"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/block_no"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/block_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/block_number_5"
        android:textAlignment="center"
        android:textSize="30sp"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <TextView
        android:id="@+id/room_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room_type_single_accomodation"
        android:textAlignment="center"
        android:textSize="30sp"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_no"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/bcd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/block_bcd_mr_a"
        android:textAlignment="center"
        android:textSize="30sp"
        app:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_type"
        app:layout_constraintVertical_bias="0.043" />
</androidx.constraintlayout.widget.ConstraintLayout>